<resources>
    <string name="app_name">material</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Crear Personas</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cedula</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>

    <string name="limpiar">Limpiar</string>
    <string name="informacion">Información</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="pregunto_eliminacion">¿Está seguro que desea eliminar a esta persona?</string>


    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>

    <string name="mensaje_guardado_exitoso">Persona guardada exitosamente!</string>
</resources>
